Cache plus operation